@@ -1,3 +1,12 @@
+2007-06-17 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.09)
+
+	* Plan9.pm: Remove irrelevant link
+	* Plan9.xs: stringarg + (strend - stringarg) == strend
+	* Plan9.xs: Handle split " " and split /^/
+	* Plan9.xs: M-x untabify
+	* t/split.t: Test for the above
+	* t/subst-loop.t: Add a note, still failing
+	
 2007-06-17 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.08)
 
 	* Plan9.xs: PERL_UNUSED_ARG() for all Plan9_intuit arguments 
